Fix alignment of text

--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,36 @@ html {
   text-size-adjust: 100%;
 
   color: #222;
+  font: normal 100%/1.3 sans-serif;
+  font-family: "Crimson Text", serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
+header h1 {
+  margin-bottom: 0;
+  font-size: 1.5rem;
+}
+
+header p {
+  font-size: .95em;
+  margin-top: 0;
+  margin-bottom: 1.4em;
+}
+
 article {
   max-width: 43em;
+  margin: 1em;
+}
+
+article ol {
+  padding: 1em;
 }
 
 article h1 {
@@ -38,6 +60,10 @@ article > p:last-child {
   border-bottom: 1px solid #999;
 }
 
+article p {
+  font-size: 1rem;
+}
+
 blockquote {
   max-width: 24em;
   color: #555;
@@ -46,4 +72,54 @@ blockquote {
 
 .quote {
   color: #999;
+}
+
+@media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.3rem;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.4rem;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.5rem;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
 }
